# Orbita

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: backtest_matches.toml  ledger.toml  sample_snapshot.toml
docs/: anisotropic_drag_result.md  architecture.md  combo_correlation_result.md  dispersion_tails_result.md  drag_lowtempo_result.md  drag_ontology.md  early_pressure_result.md  hunting_playbook.md  injury_mass_result.md  lowblock_gate_result.md  oos_calibration_result.md  redcard_validity_result.md  state_inertia_result.md  tidal_stretch_result.md  why_not_deep_learning.md
examples/: 01_two_well_validation.py  02_soccer_match.py  03_election_night.py  04_market_regime.py  05_world_cup_norway_france.py  05b_norway_france_ablation.py  06_calibration_review.py  07_multi_sport_backtest.py  08_sensor_layer.py  09_today_world_cup.py  10_strategy_layer.py  11_three_axis_event_space.py  12_inplay_kick.py
experiments/: 01_sharpening_triage.py  02_understat_backtest.py  03_footballdata_backtest.py  04_player_attractor_prototype.py  05_player_attractor_panel.py  06_alpha_blend_sweep.py  07_ou_robustness.py  08_full_season_panel.py  09_niche_markets_panel.py  10_anisotropic_drag_sweep.py  11_anisotropic_full_season.py  12_time_varying_drag_sweep.py  13_stochastic_drag.py  14_momentum_ic_features.py  15_per_team_drag_calibration.py  16_reliability_calibration.py  17_engine_market_blend.py  18_joint_3d_correlation.py  19_tidal_stretch.py  20_state_inertia.py  21_dispersion_tails.py  22_redcard_validity.py  23_drag_lowtempo_validity.py  24_injury_mass_validity.py  25_combo_correlation.py  26_precalibrate.py  (+2 more)
(+36 files in other folders)
